♻️ refactor: lazy 로딩 적용과 쿼리 최적화